TODOs

tests/support for flsa and HMM?

- option to not stop in labelError if there is the same number of
  changes in two models.

2019.05.15

Fix featureMatrix/labelError/ROChange argument checks, if(logical vector length
bigger than 1) was used and is now being checked in R-3.6.0.

2019.05.03

modelSelectionFwd and modelSelectionQuadratic.

2019.04.18

IntervalRegressionCV: informative reg.type undefined error.

2019.02.28

set last_lambda=0 when popping.

2019.02.27

import rather than Depend data.table

2018.10.23

IntervalRegression* stops with an informative error if there are no
upper/lower limits.

Remove Remotes/Travis deps.

ROChange now works when there are problems with no thresholds,
e.g. the FPR/TPR does not change at all when varying the penalty from
0 to Inf.

2018.09.24

labelError stops for unrecognized annotations.

2018.09.04

use future.apply::future_lapply.

2017.12.08

remove vignette to pass CRAN check.

2017.11.17

In vignette, remove cghseg since it has memory problems, use Segmentor
instead, with trivial 1 segment model when Segmentor fails.

Remove cghseg from example(modelSelectionC).

Don't use fullpage in vignette because that causes a NOTE on CRAN mac.

2017.07.12

try to fix vignette by using cghseg:::segmeanCO instead of Segmentor.

2017.07.11

there is some problem with Segmentor3IsBack on windows, which crashes
our vignette re-building in CRAN checks on solaris... not sure why but
try to fix via adding tryCatch in vignette.

Add ... passed from IntervalRegressionCV to
IntervalRegressionRegularized.

2017.06.14

labelError bugfix and test case for no predicted changes.

Simplify examples -- avoid running Segmentor since this crashes on new
versions of R on windows.

2017.05.08

IntervalRegressionCV uses future instead of foreach.

2017.05.05

corrections encountered while preparing tutorial,

- theme_no_space() evaluated at runtime rather than theme_no_space
  which was evaluated at build time.
